--- a/views/product.ejs
+++ b/views/product.ejs
@@ -63,16 +63,16 @@
                     <img class="ch" src="<%= data.images[i].image %>" />
                     <% } %>
                   </div>
-                  <div id="smtextContent" class="smtext">
+                  <div class="smtext">
                     <h5 class="vg-h4">貼心提醒</h5>
                     <p class="vg-h5">
-                      蔬果:<span id="productInfo" class="vg-p ms-2"></span>
+                      蔬果:<span class="vg-p ms-2 productInfo"></span>
                     </p>
                     <p class="vg-h5">
-                      保存方法:<span id="saveInfo" class="vg-p ms-2"></span>
+                      保存方法:<span class="vg-p ms-2 saveInfo"></span>
                     </p>
                     <p class="vg-h5">
-                      注意事項:<span id="noteInfo" class="vg-p ms-2"></span>
+                      注意事項:<span class="vg-p ms-2 noteInfo"></span>
                     </p>
                   </div>
                 </div>
@@ -179,12 +179,12 @@
                 <div class="middle_Con">
                   <h5 class="vg-h5">運送頻率:</h5>
                   <p>
-                    每周一次 => 一期四箱 =>
+                    每周一次 ➞ 一期四箱 ➞
                     <br />
                     訂購期 30 天 (需於45天內配送完畢&含延後2次)
                   </p>
                   <p>
-                    雙周一次 => 一期四箱 =>
+                    雙周一次 ➞ 一期四箱 ➞
                     <br />
                     訂購期 60 天 (需於90天內配送完畢 &含延後2次)
                   </p>
