--- a/views/share/modal.ejs
+++ b/views/share/modal.ejs
@@ -540,7 +540,7 @@
         >
           重新診斷
         </button>
-        <a class="btn btn-vg-reg go_shop" href="#">前往商品頁</a>
+        <a class="btn btn-vg-reg go_shop">前往商品頁</a>
       </div>
     </div>
   </div>
@@ -548,7 +548,6 @@
 
 <!-- 測試中：是否診斷Modal這裡結束 -->
 <script>
-  $(document).ready(function () {});
   function callModal() {
     $("#dxIntro").modal("show");
   }
@@ -670,4 +669,14 @@
       $("#dxResult").modal("show");
     }, 4000);
   }
+  $(".go_shop").on("click", function () {
+    openCity(event, "fu_tab7");
+    $("#dxING").modal("hide");
+    $(".modal").hide();
+    $(".modal-dialog").hide();
+    $(".fv_box, .black").show();
+    $("body").addClass("body-no-scroll");
+    let selectedSize = $(".commodity option:selected").data("size");
+    console.log(selectedSize);
+  });
 </script>
