--- a/views/orderplaced.ejs
+++ b/views/orderplaced.ejs
@@ -77,7 +77,7 @@
 
                     // 連結訂單資料表 vgorder
                     $.get(`/order/list/${uid}`, function (res) {
-                        console.log(res)
+                        // console.log(res)
                         orderNumber.innerText = res[0].oid;
                         memberMail.innerText = res[0].oMail;
                         email = res[0].oMail;
