--- a/lib/css/vg.css
+++ b/lib/css/vg.css
@@ -7,7 +7,7 @@
     --bg-2: #ac8b6a;
     --primary-L: #F2F6EA;
     --primary: #ccdcac;
-    --primary-1: #ccdcac;
+    --primary-1: rgb(204, 220, 172);
     --primary-2: #80c97e;
     --primary-hover: #7fbf7f;
     --secondary-g: #1ebd95;
