--- a/views/share/modal.ejs
+++ b/views/share/modal.ejs
@@ -565,10 +565,10 @@
 
   var data = {};
   dxQ1_vege.onclick = function () {
-    return (data.product = "fruit");
+    return (data.product = "水果");
   };
   dxQ1_fruit.onclick = function () {
-    return (data.product = "vege");
+    return (data.product = "蔬菜");
   };
   dxQ1_mix.onclick = function () {
     return (data.product = "");
