--- a/views/product.ejs
+++ b/views/product.ejs
@@ -231,6 +231,12 @@
                         class="mo_header vg-bd-5 d-flex justify-content-between align-items-center"
                       >
                         <h4 class="vg-h4 mb-0">請選擇您喜歡的蔬果</h4>
+                        <!-- <img src="/lib/img/天平.png" class="bs" />
+                        <i class="fa-solid fa-fire" style="color: #ff0000"></i>
+                        <i
+                          class="fa-solid fa-snowflake"
+                          style="color: rgb(142, 169, 215)"
+                        ></i> -->
                         <strong class="over"></strong>
                         <button type="button" class="btn-close bcl"></button>
                       </div>
