--- a/views/login.ejs
+++ b/views/login.ejs
@@ -108,10 +108,11 @@
                                     });
                                     Toast.fire({
                                         icon: 'success',
-                                        title: '登入成功!畫面將跳轉至首頁'
+                                        title: '登入成功!畫面將跳轉回瀏覽頁面'
                                     });
                                     setTimeout(function () {
-                                        location.href = "/";
+                                        var newLocation = String($.cookie('location'));
+                                        location.href = `${newLocation}`;
                                     }, 2000);
                                 })
                         }
