--- a/views/share/modal.ejs
+++ b/views/share/modal.ejs
@@ -3,6 +3,7 @@
 <button
   type="button"
   id="modalOnPage"
+  style="z-index: 20; background-color: var(--primary-2); color: #ccdcac"
   onclick="hideButton()"
   class="btn btn-vg-rnd"
   data-bs-toggle="modal"
@@ -599,7 +600,6 @@
     return (data.hot = "");
   };
   dxQ6_hot.onclick = function () {
-    $(".buyfv").empty();
     return (data.hot = "hot");
   };
 
@@ -663,7 +663,6 @@
 
   function timeoutNext() {
     $("#dxING").modal("show");
-    console.log(data);
     setTimeout(function () {
       $("#dxING").modal("hide");
       $("#dxResult").modal("show");
@@ -677,6 +676,5 @@
     $(".fv_box, .black").show();
     $("body").addClass("body-no-scroll");
     let selectedSize = $(".commodity option:selected").data("size");
-    console.log(selectedSize);
   });
 </script>
