--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -210,43 +210,6 @@
                             // console.log( item.c_option )
                             item.pname.includes("自選") ? item.pinfo = '' : item.pinfo = item.pinfo;
 
-                            // 修正自選箱價格
-                            var optionPrice = 0;
-                            var fetchPromises = [];
-                            if (item.pname.includes('自選')) {
-                                item.c_option.map((product) => {
-                                    var fetchPromise = fetch('/getitemprice', {
-                                        method: 'POST',
-                                        headers: {
-                                            "Content-Type": "application/json ; charset=UTF-8"
-                                        },
-                                        body: JSON.stringify({
-                                            product: product
-                                        })
-                                    }).then((res) => {
-                                        return res.json();
-                                    }).then((e) => {
-                                        // if (e && e[0] && e[0].price) {
-                                        //     optionPrice = optionPrice + parseInt(e[0].price);
-                                        // }
-                                        if (e && e[0] && e[0].category == '蔬菜') {
-                                            optionPrice = optionPrice + 100;
-                                        } else if (e && e[0] && e[0].category == '水果') {
-                                            optionPrice = optionPrice + 50;
-                                        }
-                                        item.price = optionPrice; // 設定到內層，非外層(?)
-                                        localStorage.setItem('optionPrice', optionPrice);
-                                    })
-                                    fetchPromises.push(fetchPromise);
-                                })
-                                Promise.all(fetchPromises).then(() => {
-                                    // After all fetch operations are done, update item.price and set localStorage
-                                    item.price = optionPrice;
-                                    localStorage.setItem('optionPrice', optionPrice);
-                                    // console.log(item.price)
-                                });
-                            }
-
                             if (item.size == 's' && item.freq == 'once') {
                                 var trHtml = `
                             <tr class="aa${item.pid}">
@@ -440,6 +403,42 @@
                             `;
                                 $("#cartitems").append(trHtml);
                             }
+
+                            // 修正自選箱價格
+                            var optionPrice = 0;
+                            var fetchPromises = [];
+                            if (item.pname.includes('自選')) {
+                                item.c_option.map((product) => {
+                                    var fetchPromise = fetch('/getitemprice', {
+                                        method: 'POST',
+                                        headers: {
+                                            "Content-Type": "application/json ; charset=UTF-8"
+                                        },
+                                        body: JSON.stringify({
+                                            product: product
+                                        })
+                                    }).then((res) => {
+                                        return res.json();
+                                    }).then((e) => {
+                                        // if (e && e[0] && e[0].price) {
+                                        //     optionPrice = optionPrice + parseInt(e[0].price);
+                                        // }
+                                        if (e && e[0] && e[0].category == '蔬菜') {
+                                            optionPrice = optionPrice + 100;
+                                        } else if (e && e[0] && e[0].category == '水果') {
+                                            optionPrice = optionPrice + 50;
+                                        }
+                                        item.price = optionPrice; // 設定到內層，非外層(!?!?)
+                                        localStorage.setItem('optionPrice', optionPrice);
+                                    })
+                                    fetchPromises.push(fetchPromise);
+                                })
+                                Promise.all(fetchPromises).then(() => {
+                                    item.price = optionPrice;
+                                    localStorage.setItem('optionPrice', optionPrice);
+                                });
+                            }
+                            
                         })
                         // console.log(items)
                         countTotal(items)
@@ -454,6 +453,12 @@
                             // 購買品項
                             item.size == 's' ? fee = 160 : fee = 290; // 運費 (S-160 L-290)
                             item.size == 's' ? item.size = '雙人箱(1~2人)' : item.size = '家庭箱(3~4人)';
+                            
+                            // 未竟之戰 (自選箱價格需重新整理才會正確顯示)
+                            if (localStorage.getItem('optionPrice') ){
+                                item.pname == '自選蔬果箱'? item.price = localStorage.getItem('optionPrice') : item.price = item.price;
+                            }
+                            
                             if (item.freq == 'once') {
                                 item.freq = '單次購買'
                             } else if (item.freq == '30d') {
