--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -223,7 +223,7 @@
                                     })
                                     Toast.fire({
                                         icon: 'success',
-                                        title: '訊息送出成功! <br>我們會盡速與您聯絡，請留意您的信箱。'
+                                        title: '訊息送出成功! <br>確認信已送至您的信箱。'
                                     })
                                     setTimeout(function () {
                                         location.reload();
