--- a/lib/css/vg.css
+++ b/lib/css/vg.css
@@ -131,7 +131,7 @@
   .btn-vg-lg:before {
     width: 0;
     height: 100%;
-    background: var(--primary-2);
+    background: var(--primary-1);
     position: absolute;
     left: 0;
     bottom: 0;
@@ -141,7 +141,7 @@
   }
   
   .btn-vg-lg:hover {
-    color: white;
+    color: var(--text-color);
     font-weight: bold;
   }
   
@@ -170,18 +170,18 @@
   .btn-vg:before {
     width: 0;
     height: 100%;
-    background: var(--primary-2);
+    background: var(--primary-1);
     position: absolute;
     left: 0;
     bottom: 0;
-    color: white;
+    color: var(--text-color);
     content: "";
     transition: all 0.3s;
     z-index: -1;
   }
   
   .btn-vg:hover {
-    color: white;
+    color: var(--text-color);
     font-weight: bold;
   }
   
@@ -208,8 +208,8 @@
   }
   
   .btn-vg-reg:hover {
-    color: white;
-    background-color: var(--primary-2);
+    color: var(--text-color);
+    background-color: var(--primary-1);
   }
   /* ↑↑↑↑↑ btn-vg-reg ↑↑↑↑↑ */
   
@@ -234,17 +234,17 @@
     position: absolute;
     height: 100%;
     width: 0;
-    background: var(--primary-2);
-    color: white;
+    background: var(--primary-1);
+    color: var(--text-color);
     left: 0;
     bottom: 0;
     transition: all 0.3s;
-    opacity: 0.5;
+    opacity: 1;
     z-index: -1;
   }
   
   .btn-vg-sm:hover {
-    color: white;
+    color: var(--text-color);
   }
   
   .btn-vg-sm:hover:before {
@@ -274,17 +274,17 @@
     position: absolute;
     height: 100%;
     width: 0;
-    background: var(--primary-2);
-    color: white;
+    background: var(--primary-1);
+    color: var(--text-color);
     left: 0;
     bottom: 0;
     transition: all 0.3s;
-    opacity: 0.5;
+    opacity: 1;
     z-index: -1;
   }
   
   .btn-vg-xs:hover {
-    color: white;
+    color: var(--text-color);
   }
   
   .btn-vg-xs:hover:before {
@@ -381,7 +381,7 @@
   .btn-vg-3:before {
     width: 0;
     height: 3px;
-    background: var(--primary-2);
+    background: var(--primary-1);
     position: absolute;
     left: 45%;
     bottom: 0;
@@ -398,7 +398,7 @@
   .btn-vg-3-active:before {
     width: 100%;
     height: 3px;
-    background: var(--primary-2);
+    background: var(--primary-1);
     position: absolute;
     left: 0;
     bottom: 0;
